# promptmage

./: .gitignore  404.html  CNAME  CODE_OF_CONDUCT.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml
docs/: getting-started.md  index.md  license.md  reference.md  roadmap.md  tutorial.md  walkthrough.md
docs/stylesheets/: extra.css
examples/: README.md  minimal-example.py  multiflow.py  pyproject.toml  simple_application.py  simple_application_with_promptmage.py  summarize_article_by_facts.py  summarize_article_by_facts_remote.py  youtube_understanding.py
examples/docker/: .env.example  Dockerfile  README.md  requirements.txt  summarize_article_by_facts.py
experimental/: try_flowforge.py
flowforge-frontend/: Makefile  package-lock.json  package.json
flowforge-frontend/src/: App.css  App.js
flowforgeai/: __init__.py  app.py  cli.py  decorator.py  forge.py  frontend.py  prompt.py  utils.py
flowforgeai/static/: asset-manifest.json  manifest.json
flowforgeai/static/static/js/: main.b5cd8004.js
getting-started/: index.html
license/: index.html
promptmage/: __init__.py  api.py  cli.py  exceptions.py  mage.py  prompt.py  prompt_store.py  remote.py  result.py  run.py  run_data.py  step.py  utils.py
promptmage-frontend/public/: index.html
promptmage/frontend/: __init__.py  frontend.py  main.py
promptmage/frontend/components/: dataset_page.py  evaluation_page.py  flow_page.py  main_runner.py  menu.py  message.py  overview_page.py  prompts_page.py  runs_page.py  step_runner.py  styles.py  theme.py
promptmage/static/: index.html
promptmage/static/static/css/: main.97eee1a4.css  main.97eee1a4.css.map
promptmage/static/static/js/: 453.3f617a88.chunk.js  453.3f617a88.chunk.js.map  main.b5cd8004.js.map
promptmage/storage/: __init__.py  data_store.py  file_backend.py  memory_backend.py  prompt_store.py  remote_data_backend.py  remote_prompt_backend.py  sqlite_backend.py  storage_backend.py  utils.py
reference/: index.html
roadmap/: index.html
search/: search_index.json
stylesheets/: extra.css  hides.css
tests/: conftest.py  minimal_example.py  test_api.py  test_decorator.py  test_forge.py  test_mage.py  test_mage_step.py  test_sqlite_backend.py
tutorial/: index.html
walkthrough/: index.html
