[tool.poetry]
name = "promptmage"
version = "0.0.2"
description = "\"PromptMage\" is designed to offer an intuitive interface that simplifies the process of creating and managing LLM workflows as a self-hosted solution."
authors = ["Tobias Sterbak <github@tobiassterbak.com>"]
license = "MIT"
readme = "README.md"
include = ["promptmage/static"]
homepage = "https://promptmage.io"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
click = "^8.1.7"
fastapi = "^0.110.3"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
setuptools = "^69.5.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.4.2"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
promptmage = "promptmage.cli:serve"
