[tool.poetry]
name = "examples"
version = "0.1.0"
description = ""
authors = ["Tobias Sterbak <github@tobiassterbak.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.30.1"
promptmage = {path = "../.", develop = true}
python-dotenv = "^1.0.1"
youtube-transcript-api = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
